[project]
name = "graphrag-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-neo4j>=0.9.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "neo4j>=6.2.0",
    "python-dotenv>=1.2.2",
]
